--- a/dae_conftests/dae_conftests/tests/fixtures/annotation.yaml
+++ b/dae_conftests/dae_conftests/tests/fixtures/annotation.yaml
@@ -1,5 +1,17 @@
-annotators:
+effect_annotators:
+  - annotator: effect_annotator
+    gene_models: test_gene_models
+    genome: hg38/GRCh38-hg38/genome
+
+
+liftover_annotators:
+  - annotator: liftover_annotator
+    chain: test_chain
+    genome: test_genome
+
+score_annotators:
  - annotator: position_score
    resource: hg38/TESTphastCons100way
+
  - annotator: np_score
    resource: hg38/TESTCADD
