GPF-1055 effect annotator integrated into annotation pipeline

--- a/dae_conftests/dae_conftests/tests/fixtures/annotation.yaml
+++ b/dae_conftests/dae_conftests/tests/fixtures/annotation.yaml
@@ -1,6 +1,6 @@
 effect_annotators:
   - annotator: effect_annotator
-    gene_models: test_gene_models
+    gene_models: hg38/GRCh38-hg38/gene_models/refSeq_20200330
     genome: hg38/GRCh38-hg38/genome
 
 
