GPF-1055 reorganize resource caching

--- a/dae/dae/gpf_instance/tests/fixtures/DAE.conf
+++ b/dae/dae/gpf_instance/tests/fixtures/DAE.conf
@@ -1,7 +1,8 @@
 dae_data_dir = "."
 
 [vars]
-wd = "."
+wd = "%($DAE_DB_DIR)s"
+instance_id = "test_local_hg19_instance"
 
 [storage.genotype_filesystem]
 storage_type = "filesystem"
@@ -29,3 +30,8 @@ conf_file = "genomesDB.conf"
 
 [default_study_config]
 conf_file = "defaultConfiguration.conf"
+
+[genomic_resources]
+repositories = [
+    {id="%(instance_id)s", url="file://%(wd)s", cache="%($HOME)s/gpf-resources-cache"}
+]
