GPF-1225 adjustments to pass tests

--- a/dae/dae/gpf_instance/tests/fixtures/DAE.conf
+++ b/dae/dae/gpf_instance/tests/fixtures/DAE.conf
@@ -33,5 +33,5 @@ conf_file = "defaultConfiguration.conf"
 
 [genomic_resources]
 repositories = [
-    {id="%(instance_id)s", url="file://%(wd)s", cache="%($HOME)s/gpf-resources-cache"}
+    {id="%(instance_id)s", type="directory", directory="%(wd)s"}
 ]
