GPF-1246 Add test for person sets queries

--- a/dae_conftests/dae_conftests/tests/fixtures/studies/iossifov_we2014_test/iossifov_we2014_test.conf
+++ b/dae_conftests/dae_conftests/tests/fixtures/studies/iossifov_we2014_test/iossifov_we2014_test.conf
@@ -5,7 +5,7 @@ study_type = ["WE"]
 description = "iossifov_we2014_test"
 
 [person_set_collections]
-selected_person_set_collections = ["phenotype"]
+selected_person_set_collections = ["status", "phenotype"]
 
 [genotype_storage]
 id = "genotype_impala_backends"
