GPF-1225 reorganization of build.sh

--- a/.gitignore
+++ b/.gitignore
@@ -70,6 +70,7 @@ dae_conftests/dae_conftests/tests/fixtures/datasets/denovo-cache-phenotype.json
 dae_conftests/dae_conftests/tests/fixtures/studies/Study1/common_report.json
 common_report.json
 import
+cache
 /build-env/
 test-results/
 Jenkinsfile.generated-stages
