GPF-1291 reorganization of GPF instance configuration started

--- a/dae_conftests/dae_conftests/tests/fixtures/defaultConfiguration.conf
+++ b/dae_conftests/dae_conftests/tests/fixtures/defaultConfiguration.conf
@@ -13,7 +13,7 @@ conf_dir = "."
 
 
 [genotype_browser]
-enabled = false
+enabled = true
 has_family_filters = true
 has_study_filters = true
 has_present_in_child = true
@@ -127,6 +127,17 @@ gene_sets_names = [
 ]
 
 [person_set_collections]
+selected_person_set_collections = ["status"]
+
+status.id = "status"
+status.name = "Affected Status"
+status.domain = [
+    {id = "affected", name = "affected", values = ["affected"], color = "#e35252"},
+    {id = "unaffected", name = "unaffected", values = ["unaffected"], color = "#ffffff"}
+]
+status.default = {id = "unspecified", name = "unspecified", values = ["unspecified"], color = "#aaaaaa"}
+status.sources = [{from = "pedigree", source = "status"}]
+
 phenotype.id = "phenotype"
 phenotype.name = "Phenotype"
 phenotype.domain = [
@@ -180,6 +191,9 @@ effect_types = ["LGDs", "missense", "synonymous"]
 
 [common_report]
 enabled = true
+effect_groups = ["LGDs", "nonsynonymous", "UTRs"]
+effect_types = ["Nonsense", "Frame-shift", "Splice-site", "Missense", "No-frame-shift", "noStart", "noEnd", "Synonymous", "Non coding", "Intron", "Intergenic", "3'-UTR", "5'-UTR"]
+families_count_show_id = 4
 
 [gene_browser]
 enabled = true
