--- a/dae_conftests/dae_conftests/tests/fixtures/studies/quads_in_child/quads_in_child.conf
+++ b/dae_conftests/dae_conftests/tests/fixtures/studies/quads_in_child/quads_in_child.conf
@@ -17,7 +17,7 @@ format = "vcf"
 params = {vcf_denovo_mode = "denovo"}
 
 [person_set_collections]
-selected_person_set_collections = ["phenotype"]
+selected_person_set_collections = ["phenotype", "status"]
 phenotype.id = "phenotype"
 phenotype.name = "Phenotype"
 phenotype.domain = [
