--- a/dae_conftests/dae_conftests/tests/fixtures/studies/study4/test.conf
+++ b/dae_conftests/dae_conftests/tests/fixtures/studies/study4/test.conf
@@ -5,7 +5,7 @@ study_type = ["WE"]
 description = "Study 4"
 
 [person_set_collections]
-selected_person_set_collections = ["phenotype"]
+selected_person_set_collections = ["phenotype", "status"]
 
 [genotype_storage]
 id = "genotype_filesystem"
