--- a/dae_conftests/dae_conftests/tests/fixtures/studies/study4/test.conf
+++ b/dae_conftests/dae_conftests/tests/fixtures/studies/study4/test.conf
@@ -24,3 +24,6 @@ enabled = true
 enabled = true
 families_count_show_id = 1
 effect_types = ["Frame-shift", "Missense"]
+
+[gene_browser]
+enabled = false
