--- a/dae/dae/annotation/tests/example_annotation.yaml
+++ b/dae/dae/annotation/tests/example_annotation.yaml
@@ -1,17 +1,65 @@
 - effect_annotator:
+    # Let's assume that by default effect_annotator will add
+    #  the attributes:  worst_effect effect_genes effect_details
+
+- effect_annotator:
     gene_models: hg38/GRCh38-hg38/gene_models/refSeq_20200330
     genome: hg38/GRCh38-hg38/genome
+    attributes:
+      - source: worst_effect
+        destination: old_worst_effect
+
 
 - liftover_annotator:
     resource: hg38/hg38tohg19
     liftover_id: hg38tohg19
     target_genome: hg19/GATK_ResourceBundle_5777_b37_phiX174/genome
 
-- score: hg38/TESTphastCons100way
-- score: hg38/TESTCADD
+
+- np_score: hg38/TESTphastCons100way
+   # The Annotbor should treat this as equivalent to:
+   # - np_score: 
+   #     resrouce_id: hg38/TESTphastCons100way
+   # 
+   # If 'default_annotation_attributes' is present in the configuration for the resource,
+   # it is must be a list of the scores configured for the resource. The 
+   # attributes will be the names of the scores in the 'default_annotation_attributes'.
+   # Otherwise, all scores configured for the resoruce will be returned as 
+   # attributes.
+
+
+- position_score: 
+    resource_id: hg38/TESTCADD
+    attributes:
+    - destination: max_sc
+      source: score_name
+      position_aggregator: max
+    - destination: mean_sc
+      source: score_name
+      position_aggregator: mean  
+
+- position_score: 
+    resource_id: hg38/TESTCADD
+    attributes:
+    - score1
+    - score2
+    - score3
+# This should be equivallent to:
+- position_score: 
+    resource_id: hg38/TESTCADD
+    attributes:
+    - destiantion: score1
+      source: score1
+    - destination: score2
+      source: score2
+    - destination: score3
+      source: score3
+
+
+
 # the above is equivallent to:
 # - score:
 #     resource: hg38/TESTCADD
-- score:
+- allele_score:
     resource: hg19/MPC
     liftover_id: hg38tohg19
