--- a/dae/dae/annotation/tests/example_annotation.yaml
+++ b/dae/dae/annotation/tests/example_annotation.yaml
@@ -11,7 +11,7 @@
 
 
 - liftover_annotator:
-    resource: hg38/hg38tohg19
+    resource_id: hg38/hg38tohg19
     liftover_id: hg38tohg19
     target_genome: hg19/GATK_ResourceBundle_5777_b37_phiX174/genome
 
