--- a/environment.yml
+++ b/environment.yml
@@ -19,7 +19,8 @@ dependencies:
   - scipy=1.7.1
   - matplotlib=3.4.2
   - pandas=1.3.1
-  - pyarrow=4.0.1
+  - pyarrow=6.0.0
+  - fsspec=2021.11.0
   - seaborn=0.11.1
   - statsmodels=0.12.2
   - pyliftover=0.4
