GPF-1314 reorganization of annotation configuration

--- a/dae/dae/annotation/tests/fixtures/import_annotation.yaml
+++ b/dae/dae/annotation/tests/fixtures/import_annotation.yaml
@@ -1,17 +1,15 @@
-effect_annotators:
-  - annotator: effect_annotator
+- effect_annotator:
     gene_models: hg38/GRCh38-hg38/gene_models/refSeq_20200330
     genome: hg38/GRCh38-hg38/genome
 
 
-liftover_annotators:
-  - annotator: liftover_annotator
+- liftover_annotator:
+    liftover_id: test_liftover
     chain: test_chain
-    genome: test_genome
+    target_genome: test_genome
 
-score_annotators:
- - annotator: position_score
-   resource: hg38/TESTphastCons100way
+- position_score:
+    resource_id: hg38/TESTphastCons100way
 
- - annotator: np_score
-   resource: hg38/TESTCADD
+- np_score:
+    resource_id: hg38/TESTCADD
