--- a/dae_conftests/dae_conftests/tests/fixtures/annotation.yaml
+++ b/dae_conftests/dae_conftests/tests/fixtures/annotation.yaml
@@ -4,7 +4,7 @@
 
 
 - liftover_annotator:
-    liftover_id: hg38tohg19
+    id: hg38tohg19
     chain: hg38/hg38tohg19
     target_genome: hg19/GATK_ResourceBundle_5777_b37_phiX174_short/genome
 
