--- a/dae/dae/annotation/tests/example_annotation.yaml
+++ b/dae/dae/annotation/tests/example_annotation.yaml
@@ -65,21 +65,21 @@
 #      source:      liftover_annotable
 #      internal:    yes
 - liftover_annotator:
-    resource_id: hg38/hg38tohg19
+    chain: hg38/hg38tohg19
     target_genome: hg19/GATK_ResourceBundle_5777_b37_phiX174/genome
 
 - liftover_annotator:
-    resource_id: hg38/hg38tohg19
+    chain: hg38/hg38tohg19
     target_genome: hg17/bla/genome
     - destination: liftover_annotable_hg17
       source:      liftover_annotable
       internal:    yes
 
-- allele_score:
+- np_score:
     resource: hg19/MPC
     input_annotable: liftover_annotable
 
-  - allele_score:
+- allele_score:
     resource: hg17/db_gap
     input_annotable: liftover_annotable_hg17
 
