--- a/dae_conftests/dae_conftests/tests/fixtures/annotation.yaml
+++ b/dae_conftests/dae_conftests/tests/fixtures/annotation.yaml
@@ -4,7 +4,6 @@
 
 
 - liftover_annotator:
-    id: hg38tohg19
     chain: hg38/hg38tohg19
     target_genome: hg19/GATK_ResourceBundle_5777_b37_phiX174_short/genome
 
@@ -15,5 +14,5 @@
     resource_id: hg38/TESTCADD
 
 - np_score:
-    liftover_id: hg38tohg19
     resource_id: hg19/MPC
+    input_annotatable: liftover_annotatable
