--- a/environment.yml
+++ b/environment.yml
@@ -17,6 +17,7 @@ dependencies:
   - networkx=2.6.2
   - numpy=1.21.1
   - scipy=1.7.1
+  - scikit-learn=1.0.1
   - matplotlib=3.4.2
   - pandas=1.3.1
   - pyarrow=4.0.1
