--- a/requirements.txt
+++ b/requirements.txt
@@ -1,37 +1,37 @@
+python==3.9
 pysam==0.16.0.1
 samtools==1.12
 impyla==0.16.3
-thriftpy2==0.4.11
+thriftpy2==0.4.14
 thrift==0.13.0
 lark-parser==0.6.7
 networkx==2.6.2
-numpy==1.21.1
+numpy==1.21.2
 scipy==1.7.1
+scikit-learn==1.0.1
 matplotlib==3.4.2
-pandas==1.3.1
-pyarrow==4.0.1
-seaborn==0.11.1
-statsmodels==0.12.2
+pandas==1.3.4
+pyarrow==6.0.1
+fsspec==2021.11.0
 pyliftover==0.4
-python==3.8
 python-box==5.3.0
 setuptools==52.0.0
-sqlalchemy==1.4.22
+sqlalchemy==1.4.27
 sqlite==3.36.0
 django==3.2.6
 django-cors-headers==3.7.0
 django-guardian==2.4.0
 djangorestframework==3.12.4
-openjdk==8.0.192
+openjdk==8.0.152
 hadoop==3.1.2
-pybigwig==0.3.18
 deprecation==2.1.0
 toml==0.10.2
-cerberus==1.3.2
+cerberus==1.3.4
 jinja2==3.0.1
-snakemake-minimal==6.5.2
+snakemake-minimal==6.12.1
 ijson==3.1.4
-lxml==4.6.3
+lxml==4.6.5
+beautifulsoup4==4.9.3
 bump2version==1.0.1
 pytest-doctestplus==0.4.0
 sphinx==4.1.2
@@ -48,4 +48,3 @@ pytest-xdist==2.3.0
 pytest-django==4.4.0
 pylint==2.9.1
 pre-commit==2.13.0
-django-extensions==2.2.5
