--- a/environment.yml
+++ b/environment.yml
@@ -25,6 +25,7 @@ dependencies:
   - pandas=1.3.4
   - pyarrow=6.0.1
   - fsspec=2021.11.0
+  - aiohttp=3.8.1
   - pyliftover=0.4
   - python-box=5.3.0
   - setuptools=52.0.0
