--- a/dae_conftests/dae_conftests/tests/fixtures/annotation_pipeline/import_annotation.yaml
+++ b/dae_conftests/dae_conftests/tests/fixtures/annotation_pipeline/import_annotation.yaml
@@ -2,6 +2,10 @@
 - effect_annotator:
     genome: "hg19/genomes/GATK_ResourceBundle_5777_b37_phiX174"
     gene_models: "hg19/gene_models/refGene_v201309"
+    attributes:
+    - source: allele_effects
+      destination: allele_effects
+      internal: true
 
 
 - position_score: hg19/internal/scores1
