--- a/environment.yml
+++ b/environment.yml
@@ -21,7 +21,7 @@ dependencies:
   - numpy=1.21.2
   - scipy=1.7.1
   - scikit-learn=1.0.1
-  - matplotlib=3.4.2
+  - matplotlib-base=3.4.2
   - pandas=1.3.4
   - pyarrow=6.0.1
   - fsspec=2021.11.0
