--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 python==3.9
-pysam==0.16.0.1
+pysam==0.17.0
 samtools==1.12
 impyla==0.16.3
 thriftpy2==0.4.14
@@ -9,10 +9,12 @@ networkx==2.6.2
 numpy==1.21.2
 scipy==1.7.1
 scikit-learn==1.0.1
-matplotlib==3.4.2
+matplotlib-base==3.4.2
 pandas==1.3.4
 pyarrow==6.0.1
-fsspec==2021.11.0
+aiohttp==3.8.1
+fsspec==2021.11.1
+s3fs==2021.11.1
 pyliftover==0.4
 python-box==5.3.0
 setuptools==52.0.0
@@ -30,8 +32,6 @@ cerberus==1.3.4
 jinja2==3.0.1
 snakemake-minimal==6.12.1
 ijson==3.1.4
-lxml==4.7.1
-beautifulsoup4==4.9.3
 bump2version==1.0.1
 pytest-doctestplus==0.4.0
 sphinx==4.1.2
@@ -48,3 +48,4 @@ pytest-xdist==2.3.0
 pytest-django==4.4.0
 pylint==2.9.1
 pre-commit==2.13.0
+moto==2.3.0
