--- a/dev-environment.yml
+++ b/dev-environment.yml
@@ -25,3 +25,8 @@ dependencies:
   - pylint=2.9.1
   - pre-commit=2.13.0
   - moto=2.3.0
+  - pandas-stubs=1.2.0.43
+  - django-stubs=1.9.0
+  - types-pyyaml=6.0.3
+  - types-setuptools=52.0.0
+  - sqlalchemy-stubs=0.4
