--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,7 @@ python-box==5.3.0
 setuptools==52.0.0
 sqlalchemy==1.4.27
 sqlite==3.36.0
-django==3.2.11
+django==3.2.12
 django-cors-headers==3.7.0
 django-guardian==2.4.0
 djangorestframework==3.12.4
@@ -32,6 +32,8 @@ cerberus==1.3.4
 jinja2==3.0.1
 snakemake-minimal==6.12.1
 ijson==3.1.4
+dask==2022.1.0
+dask-kubernetes==2022.1.0
 bump2version==1.0.1
 pytest-doctestplus==0.4.0
 sphinx==4.1.2
