--- a/dev-environment.yml
+++ b/dev-environment.yml
@@ -32,6 +32,7 @@ dependencies:
   - sqlalchemy-stubs=0.4
   - data-science-types=0.2.23
   - types-toml=0.10.3
+  - dask-jobqueue=0.7.3
   - pip
   - pip:
     - rangehttpserver
