--- a/dev-environment.yml
+++ b/dev-environment.yml
@@ -9,7 +9,6 @@ channels:
   - iossifovlab
 dependencies:
   - bump2version=1.0.1
-  - pytest-doctestplus=0.4.0
   - sphinx=4.1.2
   - sphinx_rtd_theme=0.5.2
   - sphinx-copybutton=0.4.0
@@ -22,7 +21,7 @@ dependencies:
   - pytest-mock=3.6.1
   - pytest-xdist=2.3.0
   - pytest-django=4.4.0
-  - pytest-doctestplus=0.9.0
+  - pytest-doctestplus=0.12.0
   - pylint=2.9.1
   - pre-commit=2.13.0
   - moto=2.3.0
@@ -34,7 +33,7 @@ dependencies:
   - data-science-types=0.2.23
   - types-toml=0.10.3
   - dask-jobqueue=0.7.3
-  - pip
+  - pip=21.3.1
   - pip:
-    - sphinx-autorun
-    - rangehttpserver
+    - sphinx-autorun==1.1.1
+    - rangehttpserver==1.2.0
