GPF-1511 Fix config paths

--- a/dae_conftests/dae_conftests/tests/fixtures/studies/comp/comp.conf
+++ b/dae_conftests/dae_conftests/tests/fixtures/studies/comp/comp.conf
@@ -8,12 +8,11 @@ phenotype_data = "comp_pheno"
 phenotype_tool = true
 phenotype_browser = true
 
-
 [genotype_storage]
 id = "genotype_filesystem"
 
 [genotype_storage.files]
-pedigree.path = "/home/ivo/data-hg19-startup/studies/comp/data/comp.ped"
+pedigree.path = "data/comp.ped"
 pedigree.params.ped_family = "familyId"
 pedigree.params.ped_person = "personId"
 pedigree.params.ped_mom = "momId"
@@ -28,7 +27,7 @@ pedigree.params.ped_layout_mode = "load"
 pedigree.params.ped_sep = "\t"
 
 [[genotype_storage.files.variants]]
-path = "/home/ivo/data-hg19-startup/studies/comp/data/comp.tsv"
+path = "data/comp.tsv"
 format = "denovo"
 params.denovo_location = "location"
 params.denovo_variant = "variant"
@@ -37,7 +36,7 @@ params.denovo_best_state = "bestState"
 params.denovo_sep = "\t"
 
 [[genotype_storage.files.variants]]
-path = "/home/ivo/data-hg19-startup/studies/comp/data/comp.vcf"
+path = "data/comp.vcf"
 format = "vcf"
 params.vcf_include_reference_genotypes = false
 params.vcf_include_unknown_family_genotypes = false
