GPF-1491 Fix fixture config

--- a/dae_conftests/dae_conftests/tests/fixtures/gpf_instance.yaml
+++ b/dae_conftests/dae_conftests/tests/fixtures/gpf_instance.yaml
@@ -81,15 +81,12 @@ annotation:
   conf_file: "%(wd)s/annotation_pipeline/import_annotation.conf"
 
 grr:
-  id: "test"
-  type: group
-  children:
-  - id: "grr_test_repo"
-    type: "directory"
-    directory: "$(wd)s/test_repo"
+  id: "grr_test_repo"
+  type: "directory"
+  directory: "$(wd)s/test_repo"
 
 gene_sets_db:
-  gene_sets_collections:
+  gene_set_collections:
     - gene_sets/main
     - gene_sets/test_mapping
     - gene_sets/test_gmt
