GPF-1491 Fix typo

--- a/dae_conftests/dae_conftests/tests/fixtures/gpf_instance.yaml
+++ b/dae_conftests/dae_conftests/tests/fixtures/gpf_instance.yaml
@@ -83,7 +83,7 @@ annotation:
 grr:
   id: "grr_test_repo"
   type: "directory"
-  directory: "$(wd)s/test_repo"
+  directory: "%(wd)s/test_repo"
 
 gene_sets_db:
   gene_set_collections:
