--- a/dae_conftests/dae_conftests/tests/fixtures/defaultConfiguration.conf
+++ b/dae_conftests/dae_conftests/tests/fixtures/defaultConfiguration.conf
@@ -22,20 +22,20 @@ has_pedigree_selector = false
 has_graphical_preview = true
 
 preview_columns = [
-    "family", "variant", "genotype", "effect", "weights", "freq", "effect"
+    "family", "variant", "genotype", "effect", "scores", "freq", "effect"
 ]
 
 download_columns = [
     "family", "phenotype", "variant", "best", "fromparent", "inchild", "effect",
-    "count", "geneeffect", "effectdetails", "weights", "freq"
+    "count", "geneeffect", "effectdetails", "scores", "freq"
 ]
 
 summary_preview_columns = [
-    "variant", "effect", "weights", "mpc_cadd", "freq"
+    "variant", "effect", "scores", "mpc_cadd", "freq"
 ]
 
 summary_download_columns = [
-    "variant", "effect", "geneeffect", "effectdetails", "weights", "freq"
+    "variant", "effect", "geneeffect", "effectdetails", "scores", "freq"
 ]
 
 [genotype_browser.columns.genotype]
@@ -97,8 +97,8 @@ pli_rank.format="pLI %%d"
 effect.name = "effect"
 effect.columns = ["worst_effect", "genes"]
 
-weights.name = "vulnerability/intolerance"
-weights.columns = ["lgd_rank", "rvis_rank", "pli_rank"]
+scores.name = "vulnerability/intolerance"
+scores.columns = ["lgd_rank", "rvis_rank", "pli_rank"]
 
 family.name = "family"
 family.columns = ["family_id", "study"]
