--- a/dae_conftests/dae_conftests/tests/fixtures/studies/quads_in_child/quads_in_child.conf
+++ b/dae_conftests/dae_conftests/tests/fixtures/studies/quads_in_child/quads_in_child.conf
@@ -98,8 +98,8 @@ freq.columns = ["ssc_freq", "evs_freq", "e65_freq"]
 effect.name = "effect"
 effect.columns = ["worst_effect", "genes"]
 
-weights.name = "vulnerability/intolerance"
-weights.columns = ["lgd_rank", "rvis_rank", "pli_rank"]
+scores.name = "vulnerability/intolerance"
+scores.columns = ["lgd_rank", "rvis_rank", "pli_rank"]
 
 family.name = "family"
 family.columns = ["family_id", "study"]
