--- a/environment.yml
+++ b/environment.yml
@@ -13,7 +13,9 @@ channels:
 dependencies:
   - python=3.9
   - pysam=0.19.0
-  - samtools=1.14
+  - samtools=1.15.1
+  - htslib=1.15.1
+  - bcftools=1.15.1
   - impyla=0.16.3
   - thriftpy2=0.4.14
   - thrift=0.13.0
