--- a/dev-environment.yml
+++ b/dev-environment.yml
@@ -35,6 +35,7 @@ dependencies:
   - types-python-dateutil=2.8.9
   - dask-jobqueue=0.7.3
   - pip=21.3.1
+  - lxml=4.8.0
   - pip:
     - sphinx-autorun==1.1.1
     - rangehttpserver==1.2.0
