--- a/dev-environment.yml
+++ b/dev-environment.yml
@@ -34,6 +34,7 @@ dependencies:
   - types-toml=0.10.3
   - types-python-dateutil=2.8.9
   - dask-jobqueue=0.7.3
+  - bandit=1.7.4
   - pip=21.3.1
   - lxml=4.8.0
   - pip:
