--- a/dev-environment.yml
+++ b/dev-environment.yml
@@ -14,7 +14,9 @@ dependencies:
   - sphinx-copybutton=0.4.0
   - sphinxcontrib-httpdomain=1.7.0
   - coverage=5.5
-  - flake8=3.9.2
+  - flake8=4.0.1
+  - flake8-quotes=3.3.1
+  - mccabe=0.7.0
   - mypy=0.931
   - pytest=6.2.4
   - pytest-cov=2.12.1
