--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 python==3.9
-pysam==0.17.0
-samtools==1.12
+pysam==0.19.0
+samtools==1.15.1
+htslib==1.15.1
+bcftools==1.15.1
 impyla==0.16.3
 thriftpy2==0.4.14
 thrift==0.13.0
@@ -20,12 +22,12 @@ python-box==5.3.0
 setuptools==52.0.0
 sqlalchemy==1.4.27
 sqlite==3.36.0
-django==3.2.12
+django==4.0.4
 django-cors-headers==3.7.0
 django-guardian==2.4.0
 djangorestframework==3.12.4
-openjdk==8.0.152
-hadoop==3.1.2
+openjdk==11.0.13
+hadoop==3.3.2
 deprecation==2.1.0
 toml==0.10.2
 cerberus==1.3.4
@@ -34,27 +36,37 @@ snakemake-minimal==6.12.1
 ijson==3.1.4
 dask==2022.1.0
 dask-kubernetes==2022.1.0
+tqdm==4.62.3
+snakeobjects==3.0.7
 bump2version==1.0.1
-pytest-doctestplus==0.4.0
 sphinx==4.1.2
 sphinx_rtd_theme==0.5.2
 sphinx-copybutton==0.4.0
 sphinxcontrib-httpdomain==1.7.0
 coverage==5.5
-flake8==3.9.2
-mypy==0.910
+flake8==4.0.1
+flake8-quotes==3.3.1
+mypy==0.931
 pytest==6.2.4
 pytest-cov==2.12.1
 pytest-mock==3.6.1
 pytest-xdist==2.3.0
 pytest-django==4.4.0
+pytest-doctestplus==0.12.0
 pylint==2.9.1
 pre-commit==2.13.0
 moto==2.3.0
-pandas-stubs==1.2.0.43
+pandas-stubs==1.2.0.57
 django-stubs==1.9.0
 types-pyyaml==6.0.3
 types-setuptools==57.4.7
 sqlalchemy-stubs==0.4
 data-science-types==0.2.23
 types-toml==0.10.3
+types-python-dateutil==2.8.9
+dask-jobqueue==0.7.3
+bandit==1.7.4
+pip==21.3.1
+lxml==4.8.0
+sphinx-autorun===1.1.1
+rangehttpserver===1.2.0
