--- a/dae/dae/import_tools/tests/resources/import_task_bin_size/import_config.yaml
+++ b/dae/dae/import_tools/tests/resources/import_task_bin_size/import_config.yaml
@@ -6,7 +6,7 @@ input:
 
   denovo:
     files:
-      - variants.tsv
+      - single_chromosome_variants.tsv
     person_id: spid
     chrom: chrom
     pos: pos
