GPF-1683 Test fixes

--- a/dae_conftests/dae_conftests/tests/fixtures/gpf_instance.yaml
+++ b/dae_conftests/dae_conftests/tests/fixtures/gpf_instance.yaml
@@ -102,9 +102,7 @@ gene_sets_db:
 gene_scores_db:
   gene_scores:
     - gene_scores/SFARI_gene_score
-    - gene_scores/LGD_rank
-    - gene_scores/LGD_score
-    - gene_scores/RVIS_rank
+    - gene_scores/LGD
     - gene_scores/RVIS
 
 genomic_scores_db:
