--- a/dev-environment.yml
+++ b/dev-environment.yml
@@ -16,6 +16,7 @@ dependencies:
   - coverage=6.3.2
   - flake8=4.0.1
   - flake8-quotes=3.3.1
+  - flake8-docstrings=1.6.0
   - mypy=0.931
   - pytest=7.1.2
   - pytest-cov=3.0.0
