--- a/setup.cfg
+++ b/setup.cfg
@@ -1,12 +1,3 @@
-[bumpversion]
-current_version = 3.6.5
-
-[metadata]
-license_file = LICENSE
-
-[bdist_wheel]
-universal = 1
-
 
 [flake8]
 exclude = *old*,*tmp*,*temp*,data-hg19*,gpf*,*build*,*docs*
@@ -15,3 +6,4 @@ inline-quotes=double
 docstring-quotes=double
 multiline-quotes=double
 docstring-convention=pep257
+ignore = D100,D101,D102,D103,D104,D105,D106,D107
