Hinde chrom name adjustment behind the loaders
When it came to chrom names the loaders API was very messy. Some
functions would return adjusted chrom names others unadjusted. Worst
some classes would return ajusted and others unadjusted for the same
function. This is now been fixed. All chrom names returned or taken as
arguments to the variant loader classes are now adjusted. The
adjustment/unadjustment is done internally by the loaders.

--- a/dae/dae/import_tools/tests/resources/vcf_import/import_config_add_chrom_prefix.yaml
+++ b/dae/dae/import_tools/tests/resources/vcf_import/import_config_add_chrom_prefix.yaml
@@ -13,7 +13,7 @@ input:
 
 partition_description:
   region_bin:
-    chromosomes: 1, 2, 3, 4
+    chromosomes: chr1, chr2, chr3, chr4
     region_length: 100000000
   family_bin:
     family_bin_size: 10
