Mypy type ignored libraries with missing type stubs

--- a/mypy.ini
+++ b/mypy.ini
@@ -1,3 +1,28 @@
 [mypy]
 warn_return_any = True
 warn_redundant_casts = True
+
+[mypy-matplotlib.*]
+ignore_missing_imports = True
+
+[mypy-pysam]
+ignore_missing_imports = True
+
+[mypy-lark.*]
+ignore_missing_imports = True
+
+[mypy-pyarrow.*]
+ignore_missing_imports = True
+
+[mypy-google.cloud.*]
+ignore_missing_imports = True
+
+[mypy-fsspec.*]
+ignore_missing_imports = True
+
+[mypy-scipy.*]
+ignore_missing_imports = True
+
+[mypy-box]
+ignore_missing_imports = True
+
