Fix pylint errors for import tools

--- a/mypy.ini
+++ b/mypy.ini
@@ -26,3 +26,5 @@ ignore_missing_imports = True
 [mypy-box]
 ignore_missing_imports = True
 
+[mypy-dask.distributed.*]
+ignore_missing_imports = True
