--- a/dev-environment.yml
+++ b/dev-environment.yml
@@ -32,7 +32,7 @@ dependencies:
   - sqlalchemy-stubs=0.4
   - types-toml=0.10.3
   - types-python-dateutil=2.8.9
-  - type-requests=2.27.30
+  - types-requests=2.27.30
   - dask-jobqueue=0.7.3
   - bandit=1.7.4
   - pip=21.3.1
