GPF-1712 close added to annotators and loaders

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,4 +6,4 @@ inline-quotes=double
 docstring-quotes=double
 multiline-quotes=double
 docstring-convention=pep257
-ignore = D100,D101,D102,D103,D104,D105,D106,D107
+ignore = D100,D101,D102,D103,D104,D105,D106,D107,W503
