--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 python==3.9
+importlib_metadata==4.11.3
 pysam==0.19.0
 samtools==1.15.1
 htslib==1.15.1
@@ -7,16 +8,16 @@ impyla==0.16.3
 thriftpy2==0.4.14
 thrift==0.13.0
 lark-parser==0.6.7
-networkx==2.6.2
-numpy==1.21.2
-scipy==1.7.1
+networkx==2.7.1
+numpy==1.22.3
+scipy==1.7.3
 scikit-learn==1.0.1
-matplotlib-base==3.4.2
-pandas==1.3.4
-pyarrow==6.0.1
+matplotlib-base==3.5.1
+pandas==1.4.2
+pyarrow==7.0.0
 aiohttp==3.8.1
-fsspec==2021.11.1
-s3fs==2021.11.1
+fsspec==2022.5.0
+s3fs==2022.5.0
 pyliftover==0.4
 python-box==5.3.0
 setuptools==52.0.0
@@ -46,6 +47,7 @@ sphinxcontrib-httpdomain==1.8.0
 coverage==6.3.2
 flake8==4.0.1
 flake8-quotes==3.3.1
+flake8-docstrings==1.6.0
 mypy==0.931
 pytest==7.1.2
 pytest-cov==3.0.0
@@ -53,7 +55,7 @@ pytest-mock==3.7.0
 pytest-django==4.5.2
 pytest-doctestplus==0.12.0
 pylint==2.13.8
-moto==3.1.7
+moto==3.1.11
 pandas-stubs==1.2.0.58
 django-stubs==1.10.1
 types-pyyaml==6.0.7
@@ -61,6 +63,7 @@ types-setuptools==57.4.14
 sqlalchemy-stubs==0.4
 types-toml==0.10.3
 types-python-dateutil==2.8.9
+types-requests==2.27.30
 dask-jobqueue==0.7.3
 bandit==1.7.4
 pip==21.3.1
