--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,10 +19,11 @@ services:
       - impala
     restart: "no"
     environment:
-      DAE_DB_DIR: /wd/integration/local/data
+      DAE_DB_DIR: /data
       GRR_DEFINITION_FILE: /wd/integration/grr_definition.yaml
     volumes:
       - .:/wd
+      - ./integration/local/data:/data
     entrypoint: /wd/integration/local/entrypoint.sh
 
 
@@ -37,8 +38,10 @@ services:
     ports:
       - "21010:21010"
     environment:
-      DAE_DB_DIR: /wd/integration/remote/data
+      DAE_DB_DIR: /data/
       GRR_DEFINITION_FILE: /wd/integration/grr_definition.yaml
     volumes:
       - .:/wd
+      - ./integration/remote/data:/data
+
     entrypoint: /wd/integration/remote/entrypoint.sh
