--- a/dae_conftests/dae_conftests/tests/fixtures/pheno/comp_pheno/comp_pheno.conf
+++ b/dae_conftests/dae_conftests/tests/fixtures/pheno/comp_pheno/comp_pheno.conf
@@ -1,10 +1,8 @@
-[vars]
-wd = "."
 
 [phenotype_data]
 name = "comp_pheno"
-dbfile = "%(wd)s/comp_pheno.db"
-browser_dbfile = "%(wd)s/browser/comp_pheno_browser.db"
+dbfile = "comp_pheno.db"
+browser_dbfile = "browser/comp_pheno_browser.db"
 browser_images_url = "/static/images/comp_pheno/"
 
 [regression.age]
