--- a/integration/local/data/defaultConfiguration.conf
+++ b/integration/local/data/defaultConfiguration.conf
@@ -298,12 +298,12 @@ selected_person_set_collections = ["status"]
 background.synonymous_background_model.name = "synonymousBackgroundModel"
 background.synonymous_background_model.desc = "Background model based on synonymous variants in transmitted"
 
-background.coding_len_background_model.file = "%($DAE_DB_DIR)s/enrichment/background-model-coding-len-in-target.csv"
+background.coding_len_background_model.file = "enrichment/background-model-coding-len-in-target.csv"
 background.coding_len_background_model.name = "coding_len_background_model"
 background.coding_len_background_model.kind = "coding_len_background_model"
 background.coding_len_background_model.desc = "Genes coding lenght background model"
 
-background.samocha_background_model.file = "%($DAE_DB_DIR)s/enrichment/background-samocha-et-al.csv"
+background.samocha_background_model.file = "enrichment/background-samocha-et-al.csv"
 background.samocha_background_model.name = "samocha_background_model"
 background.samocha_background_model.kind = "samocha_background_model"
 background.samocha_background_model.desc = "Background model described in Samocha et al"
