GPF-1743 clean up reference genome

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,8 @@
+[metadata]
+license_file = LICENSE
+
+[bdist_wheel]
+universal = 1
 
 [flake8]
 exclude = *old*,*tmp*,*temp*,data-hg19*,gpf*,*build*,*docs*
