Fix overly matching exclude rules for flake8

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ license_file = LICENSE
 universal = 1
 
 [flake8]
-exclude = *old*,*tmp*,*temp*,data-hg19*,gpf*,*build*,*docs*
+exclude = old,*tmp*,*temp*,data-hg19*,build,docs
 max-complexity = 15
 inline-quotes=double
 docstring-quotes=double
