--- a/dae/dae/common_reports/tests/fixtures/studies/Study1/test.conf
+++ b/dae/dae/common_reports/tests/fixtures/studies/Study1/test.conf
@@ -11,9 +11,8 @@ enabled = true
 
 [genotype_storage]
 id = "genotype_filesystem"
-
 files.pedigree.path = "data/Study1.ped"
-files.pedigree.params = {ped_file_format = "pedigree"}
+files.pedigree.params = {ped_file_format = "pedigree", ped_tags = true}
 
 [[genotype_storage.files.variants]]
 path = "data/Study1.vcf"
