--- a/mypy.ini
+++ b/mypy.ini
@@ -28,3 +28,9 @@ ignore_missing_imports = True
 
 [mypy-dask.distributed.*]
 ignore_missing_imports = True
+
+[mypy-rest_framework]
+ignore_missing_imports = True
+
+[mypy-rest_framework.*]
+ignore_missing_imports = True
