--- a/requirements.txt
+++ b/requirements.txt
@@ -1,44 +1,43 @@
-python==3.9
+python==3.10.4
 importlib_metadata==4.11.3
-pysam==0.19.0
+pysam==0.19.1
 samtools==1.15.1
 htslib==1.15.1
-bcftools==1.15.1
-impyla==0.16.3
+impyla==0.17.0
 thriftpy2==0.4.14
-thrift==0.13.0
+thrift==0.16.0
 lark-parser==0.6.7
-networkx==2.7.1
-numpy==1.22.3
-scipy==1.7.3
-scikit-learn==1.0.1
+networkx==2.8.5
+numpy==1.23.1
+scipy==1.9.0
+scikit-learn==1.1.2
 matplotlib-base==3.5.1
-pandas==1.4.2
-pyarrow==7.0.0
+pandas==1.4.3
+pyarrow==8.0.1
 aiohttp==3.8.1
-fsspec==2022.5.0
-s3fs==2022.5.0
+fsspec==2022.7.1
+s3fs==2022.7.1
 pyliftover==0.4
-python-box==5.3.0
-setuptools==52.0.0
-sqlalchemy==1.4.27
-sqlite==3.36.0
-django==4.0.6
-django-cors-headers==3.7.0
-djangorestframework==3.12.4
+python-box==6.0.2
+setuptools==65.0.1
+sqlalchemy==1.4.40
+sqlite==3.39.2
+django==4.1
+django-cors-headers==3.13.0
+djangorestframework==3.13.1
 openjdk==8.0.312
 hadoop==3.1.2
 deprecation==2.1.0
 toml==0.10.2
 cerberus==1.3.4
-jinja2==3.0.1
-snakemake-minimal==6.12.1
+jinja2==3.1.2
+snakemake-minimal==7.12.1
 ijson==3.1.4
-dask==2022.1.0
-dask-kubernetes==2022.1.0
-tqdm==4.62.3
-snakeobjects==3.0.7
-google-cloud-bigquery==2.34.2
+dask==2022.7.1
+dask-kubernetes==2022.7.0
+tqdm==4.64.0
+snakeobjects==3.1.1
+google-cloud-bigquery==3.2.0
 bump2version==1.0.1
 sphinx==4.5.0
 sphinx_rtd_theme==1.0.0
@@ -55,7 +54,8 @@ pytest-mock==3.7.0
 pytest-django==4.5.2
 pytest-doctestplus==0.12.0
 pylint==2.13.8
-moto==3.1.11
+werkzeug==2.1.2
+moto==3.1.16
 pandas-stubs==1.2.0.58
 django-stubs==1.10.1
 types-pyyaml==6.0.7
