GPF-1780 revert the environment to use python 3.9

--- a/dev-environment.yml
+++ b/dev-environment.yml
@@ -41,3 +41,6 @@ dependencies:
   - pip:
     - sphinx-autorun==1.1.1
     - rangehttpserver==1.2.0
+    - -e ./dae
+    - -e ./wdae
+    - -e ./dae_conftests
