--- a/mypy.ini
+++ b/mypy.ini
@@ -34,3 +34,6 @@ ignore_missing_imports = True
 
 [mypy-rest_framework.*]
 ignore_missing_imports = True
+
+[mypy-deprecation.*]
+ignore_missing_imports = True
