GPF-1751 Add test for study config and add support for false filters

--- a/dae_conftests/dae_conftests/tests/fixtures/datasets/Dataset3/Dataset3.conf
+++ b/dae_conftests/dae_conftests/tests/fixtures/datasets/Dataset3/Dataset3.conf
@@ -6,3 +6,6 @@ studies = ["Study3"]
 [common_report]
 enabled = false
 effect_types = ["Frame-shift", "Missense"]
+
+[genotype_browser]
+has_study_filters = true
