--- a/dae_conftests/dae_conftests/tests/fixtures/datasets/composite_dataset.conf
+++ b/dae_conftests/dae_conftests/tests/fixtures/datasets/composite_dataset.conf
@@ -2,3 +2,6 @@ name = "COMPOSITE_DATASET"
 id = "composite_dataset_ds"
 
 studies = ["inheritance_trio", "quads_f1"]
+
+[genotype_browser]
+has_study_filters = true
