--- a/dae_conftests/dae_conftests/tests/fixtures/datasets/f1_group.conf
+++ b/dae_conftests/dae_conftests/tests/fixtures/datasets/f1_group.conf
@@ -9,3 +9,6 @@ selected_person_set_collections = ["phenotype"]
 [denovo_gene_sets]
 enabled = true
 selected_person_set_collections = ["phenotype"]
+
+[genotype_browser]
+has_study_filters = true
