--- a/dae_conftests/dae_conftests/tests/fixtures/datasets/quads_composite.conf
+++ b/dae_conftests/dae_conftests/tests/fixtures/datasets/quads_composite.conf
@@ -13,6 +13,7 @@ enabled = true
 has_present_in_child = true
 has_present_in_parent = false
 has_family_filters = false
+has_study_filters = true
 has_pedigree_selector = true
 
 preview_columns = [
