--- a/dae_conftests/dae_conftests/tests/fixtures/datasets/quads_f2.conf
+++ b/dae_conftests/dae_conftests/tests/fixtures/datasets/quads_f2.conf
@@ -8,6 +8,7 @@ phenotype_browser = false
 
 [genotype_browser]
 enabled = true
+has_study_filters = true
 
 [genotype_browser.family_filters]
 categorical.name = "Categorical"
