--- a/dae_conftests/dae_conftests/tests/fixtures/datasets/quads_two_families.conf
+++ b/dae_conftests/dae_conftests/tests/fixtures/datasets/quads_two_families.conf
@@ -9,3 +9,6 @@ phenotype_browser = true
 [enrichment]
 enabled = false
 selected_person_set_collections = ["phenotype"]
+
+[genotype_browser]
+has_study_filters = true
