--- a/dae_conftests/dae_conftests/tests/fixtures/datasets/quads_variant_types.conf
+++ b/dae_conftests/dae_conftests/tests/fixtures/datasets/quads_variant_types.conf
@@ -8,6 +8,7 @@ phenotype_browser = true
 
 [genotype_browser]
 enabled = true
+has_study_filters = true
 
 family_filters.momrace.name = "Mother Race"
 family_filters.momrace.from = "phenodb"
