--- a/dae_conftests/dae_conftests/tests/fixtures/datasets/Dataset1/Dataset1.conf
+++ b/dae_conftests/dae_conftests/tests/fixtures/datasets/Dataset1/Dataset1.conf
@@ -6,3 +6,6 @@ studies = ["Study1", "Study3"]
 [common_report]
 enabled = true
 effect_types = ["Frame-shift", "Missense"]
+
+[genotype_browser]
+has_study_filters = true
