--- a/dae_conftests/dae_conftests/tests/fixtures/datasets/f3_group.conf
+++ b/dae_conftests/dae_conftests/tests/fixtures/datasets/f3_group.conf
@@ -8,3 +8,6 @@ selected_person_set_collections = ["phenotype"]
 
 [denovo_gene_sets]
 selected_person_set_collections = ["phenotype"]
+
+[genotype_browser]
+has_study_filters = true
