--- a/dae/dae/import_tools/tests/resources/cnv_import/import_config.yaml
+++ b/dae/dae/import_tools/tests/resources/cnv_import/import_config.yaml
@@ -20,3 +20,18 @@ partition_description:
     family_bin_size: 10
   frequency_bin:
     rare_boundary: 5
+
+destination:
+  hdfs:
+    base_dir: /user/schema2_tests/studies
+    host: localhost
+    port: 8020
+    replication: 1
+  impala:
+    db: schema2
+    hosts:
+    - localhost
+    pool_size: 3
+    port: 21050
+  storage_type: impala
+  schema_version: 2
