GPF-1721 import tools tests review

--- a/dae/dae/import_tools/tests/resources/vcf_import/import_config_add_chrom_prefix.yaml
+++ b/dae/dae/import_tools/tests/resources/vcf_import/import_config_add_chrom_prefix.yaml
@@ -19,3 +19,6 @@ partition_description:
     family_bin_size: 10
   frequency_bin:
     rare_boundary: 5
+
+destination:
+  storage_id: genotype_impala_2
