--- a/dae/dae/import_tools/tests/resources/cnv_import/import_config.yaml
+++ b/dae/dae/import_tools/tests/resources/cnv_import/import_config.yaml
@@ -22,16 +22,4 @@ partition_description:
     rare_boundary: 5
 
 destination:
-  hdfs:
-    base_dir: /user/schema2_tests/studies
-    host: localhost
-    port: 8020
-    replication: 1
-  impala:
-    db: schema2
-    hosts:
-    - localhost
-    pool_size: 3
-    port: 21050
-  storage_type: impala
-  schema_version: 2
+  storage_id: genotype_impala_2
